--- a/src/components/Dashboard/sidebar.scss
+++ b/src/components/Dashboard/sidebar.scss
@@ -5,8 +5,8 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #0093E9;
-  background-image: linear-gradient(160deg, #0093E9 0%, #772a9a 100%);
+  background-color: #000000;
+  // background-image: linear-gradient(160deg, #0093E9 0%, #772a9a 100%);
   box-shadow: 4px 0 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   z-index: 1000;
